Finishing tests and fixing style
