# src/static/swagger.json
@@ -425,7 +425,7 @@
         ],
         "parameters": [
           {
-            "name": "id_neighborhoods",
+            "name": "id_neighborhood",
             "in": "path",
             "description": "The id of rated neighborhood",
             "required": true,
@@ -842,16 +842,14 @@
         "rating_neighborhood": {
           "type": "integer"
         },
-        "details": {
-          "type": "string",
-          "enum": [
-            "bad lighting",
-            "low movement of people",
-            "few police rounds",
-            "good lighting",
-            "good movement of people",
-            "frequent police rounds"
-          ]
+        "lighting": {
+          "type": "boolean"
+        },
+        "movement_of_people": {
+          "type": "boolean"
+        },
+        "police_rounds": {
+          "type": "boolean"
         }
       }
     },
@@ -862,18 +860,19 @@
           "type": "integer"
         },
         "details": {
-          "type": "string",
-          "enum": [
-            "bad lighting",
-            "low movement of people",
-            "few police rounds",
-            "good lighting",
-            "good movement of people",
-            "frequent police rounds"
-          ]
+          "type": "object",
+          "lighting": {
+            "type": "boolean"
+          },
+          "movement_of_people": {
+            "type": "boolean"
+          },
+          "police_rounds": {
+            "type": "boolean"
+          }
         },
-        "id_neighborhood": {
-          "type": "integer"
+        "neighborhood": {
+          "type": "neighborhood object"
         },
         "id_rating": {
           "type": "integer"
